# Salty_peanut_grapes

./: .cursorrules  .gitignore  LICENSE  README.md  app.py  pyproject.toml  regenerate_models.sh
cli/: README.md  SKILL.md  cli.py
cula/: __init__.py  cli.py  client.py  models.py  sink_graph.py
cula/verification/: __init__.py  fetch.py  normalize.py  rules.py  scoring.py
demo/: 252d73fe-2ce9-4922-873f-f487785932c3.json  sink_graph_gnn.html
demo/checkpoints/: sink_vae.pt
embedding_outlier/: __init__.py  scan_embeddings.py
example/: build_sink_graph.py  fetch_sink.py  find_fakes.py  live_demo.py  plot_graph.py  plot_sink_gnn.py  visualize_sink_graph.py
gnn/: __init__.py  fetch_sinks.py  model.py  requirements.txt  scan_sinks.py  train.py
gnn/data/: sinks_fetch_failures.json  sinks_index.json
openapi/: cula.openapi.json
tests/: test_fetch.py  test_normalize.py  test_rules.py  test_scoring.py
