[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cula"
version = "0.1.0"
description = "httpx + Pydantic client for the Cula OpenAPI (biochar / carbon sinks)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "networkx>=3.2",
    "pydantic>=2.6",
    "python-dateutil>=2.9",
]

[project.scripts]
cula = "cula.cli:main"

[project.optional-dependencies]
dev = [
    "datamodel-code-generator>=0.25",
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.18",
]

[tool.hatch.build.targets.wheel]
packages = ["cula"]

[tool.hatch.build.targets.sdist]
include = [
    "/cula",
    "/example",
    "/openapi",
    "/pyproject.toml",
    "/README.md",
    "/regenerate_models.sh",
]
